# raptorsetup

./: CMakeLists.txt  README.md
gcc/: raptorsetup.cbp  raptorsetup.depend  raptorsetup.layout
include/textscreen/include/: txt_desktop.c  txt_desktop.h  txt_gui.c  txt_sdl.c  txt_widget.c  txt_window.c
include/textscreen/libwin/x64/: textscreen.lib
include/textscreen/libwin/x86/: textscreen.lib
makelinuxx64/: Makefile
makelinuxx86/: Makefile
makewinx64/: Makefile
makewinx86/: Makefile
msvc/: raptorsetup.sln  raptorsetup.vcxproj  raptorsetup.vcxproj.filters
src/: help.c  help.h  input.c  input.h  main.c  main.h  music.c  prefapi.c  prefapi.h  sound.c  txt_joyinput.c  txt_keyinput.c  txt_mouseinput.c
